// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a primary image 1`] = `
<div>
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
  >
    <Head />
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="0"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A Caption",
                  "credits": "Some Credits",
                }
              }
              imageOptions={
                Object {
                  "display": "primary",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "3:2",
                  "uri": "https://image-2.io",
                }
              }
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
        />
      </article>
    </main>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`2. a fullwidth image 1`] = `
<div>
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
  >
    <Head />
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="0"
        >
          <ArticleImage
            captionOptions={
              Object {
                "caption": "A Caption",
                "credits": "Some Credits",
              }
            }
            imageOptions={
              Object {
                "display": "fullwidth",
                "highResSize": null,
                "lowResSize": 100,
                "ratio": "3:2",
                "uri": "https://image-2.io",
              }
            }
          />
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
        />
      </article>
    </main>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`3. a secondary image 1`] = `
<div>
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
  >
    <Head />
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="0"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A Caption",
                  "credits": "Some Credits",
                }
              }
              imageOptions={
                Object {
                  "display": "secondary",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "3:2",
                  "uri": "https://image-2.io",
                }
              }
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
        />
      </article>
    </main>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an inline image 1`] = `
<div>
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
  >
    <Head />
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="header"
      />
    </div>
    <main
      role="main"
    >
      <div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        role="article"
      >
        <div
          id="0"
        >
          <div>
            <ArticleImage
              captionOptions={
                Object {
                  "caption": "A Caption",
                  "credits": "Some Credits",
                }
              }
              imageOptions={
                Object {
                  "display": "inline",
                  "highResSize": null,
                  "lowResSize": 100,
                  "ratio": "9:4",
                  "uri": "https://image-inline.io",
                }
              }
            />
          </div>
        </div>
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          relatedArticlesVisible={false}
          savingEnabled={true}
          sharingEnabled={true}
          spotAccountId=""
        />
      </article>
    </main>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixel"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelteads"
    />
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="pixelskin"
    />
  </article>
</div>
`;
